Fix comment-width on small screens

--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -26,6 +26,15 @@ nav {
 //   height: 1000%;
 // }
 
+
+.three-quarter-width {
+  width: 75%;
+}
+
+.full-width {
+  width: 100%;
+}
+
 .container-fluid {
   .bigger-text {
     font-size: 18px;
@@ -85,12 +94,8 @@ nav {
     margin-right: -5px;
   }
 
-  .three-quarter-width {
-    width: 75%;
-  }
-
-  .full-width {
-    width: 100%;
+  .comment-width {
+    .three-quarter-width
   }
 
   .color-green {
@@ -147,5 +152,8 @@ nav {
         margin: 0;
       }
     }
+  }
+  .comment-width {
+    .full-width !important
   }
 }
